<resources>

    <string name="app_name">CMS</string>
    <string name="title_activity_login">Login to Complaint Management System</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>

    <!-- Strings for nav_bar -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_action_settings">Settings</string>

    <!-- Strings for activity_login_layout -->
    <string name="login_Welcome_To_CMS">Welcome To CMS</string>
    <string name="login_prompt_email">UserName</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_Remember_Password">Remember Password</string>
    <string name="login_action_log_in">Login</string>
    <string name="login_reset">Reset</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_action_sign_in">Sign in</string>
    <string name="login_clear_data">Clear Data</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="action_settings">Settings</string>
    <string name="action_switch_mode">Switch User Mode</string>
    <string name="action_logout">Logout</string>

    <!-- Strings for activity_select_profile -->
    <string name="profile_login_as">Sign in as</string>
    <string name="profile_individual">Individual</string>
    <string name="profile_solver">Solver</string>
    <string name="profile_admin">Administrator</string>

    <!-- strings for choose_category_layout -->
    <string name="CHOOSE_CATEGORY">CHOOSE CATEGORY</string>
    <string name="INSTITUTE_LEVEL">INSTITUTE LEVEL</string>
    <string name="HOSTEL_LEVEL">HOSTEL LEVEL</string>
    <string name="INDIVIDUAL">INDIVIDUAL</string>
    <string name="USER_NAME">User Name</string>


    <!-- strings related to profile -->
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EntryNo">Entry No.</string>
    <string name="UserID">User ID</string>
    <string name="UserName">User Name</string>
    <string name="Email">Email Address</string>
    <string name="Type">Type</string>
    <string name="Next">Next</string>

    <!--strings related to drawer-->
    <string name="MY_PROFILE">MY PROFILE</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="HELP">HELP</string>
    <string name="LOGOUT">Logout</string>
    <string name="P_S_nav">PERSONAL SETTINGS</string>

    <!--strings related to complaint CMS-->
    <string name="COMPLAINT_FORM">COMPLAINT FORM</string>
    <string name="TITLE">TITLE</string>
    <string name="DESCRIPTION">DESCRIPTION</string>
    <string name="Enter_the_Link">Enter the Link</string>
    <string name="PREVIEW">PREVIEW</string>
    <string name="title_activity_admin_activity">Admin_activity</string>
    <string name="title_activity_solver_activity">Solver_activity</string>
    <string name="title_activity_normal_activity">Normal_activity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to app_bar -->
    <string name="form">COMPLAINT FORM</string>
    <string name="inst">INSTITUTE LEVEL</string>
    <string name="host">HOSTEL LEVEL</string>
    <string name="indi">INDIVIDUAL LEVEL</string>
    <string name="lc">LODGE A COMPLAINT</string>
    <string name="vc">VIEW COMPLAINT</string>
    <string name="p">PROFILE</string>


</resources>
