<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/profile_login_as"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/profile_button_indivual"
        style="@style/BlueWideButton"
        android:text="@string/profile_individual"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/profile_button_admin"
        style="@style/BlueWideButton"
        android:text="@string/profile_admin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/profile_button_solver"
        style="@style/BlueWideButton"
        android:text="@string/profile_solver"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>
</LinearLayout>