<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:weightSum="1"
    android:baselineAligned="false"
    android:showDividers="none">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/COMPLAINT_FORM"
        android:id="@+id/textView4"
        android:textSize="40dp"
        android:textStyle="bold|italic"
        android:textColor="#fbf9f9"
        android:textAlignment="gravity"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:id="@+id/title_text"
        android:hint="@string/TITLE"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/my_border"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:backgroundTintMode="multiply"
        android:textAlignment="center" />

    <EditText
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:id="@+id/description_text"
        android:hint="@string/DESCRIPTION"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/my_border"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.72"
        android:textAlignment="center" />
    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ImageView>

    <Button
        android:layout_width="56dp"
        android:layout_height="37dp"
        android:id="@+id/attachImage"
        android:layout_marginLeft="20dp"
        android:background="@drawable/ic_menu_camera"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <EditText
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:id="@+id/enter_the_link_text"
        android:hint="Enter the Link"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/my_border"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:backgroundTintMode="multiply"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_next_form"
        style="?android:textAppearanceSmall"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Next"
        android:textSize="30sp"
        android:onClick="Login"
        android:background="@drawable/btn"
        android:layout_marginLeft="220dp" />
</LinearLayout>